# plagiarism-checker-exercise

./: .gitignore  README.md  hello.py  plagiarism_checker.py  pyproject.toml
